--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script>
-
-    </script>
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+   <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link rel="stylesheet" href="css/styles.css" />
     <title>Vishnu</title>
 
@@ -29,13 +28,13 @@
               <div class="text-white h7">
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
+                  <a class="nav-link active" href="#about">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
+                  <a class="nav-link active" href="#">Skills</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
+                  <a class="nav-link active" href="#">Contact</a>
                 </li>
               </ul></div>
             </div>
@@ -66,8 +65,8 @@
       </div>
     </div>
     <div class="container-fluid container2">
-      <div class="row justify-content-center align-items-center py-auto">
-        <p class="h5 my-4">About Me
+      <div class="row justify-content-center align-items-center py-auto about" tabindex="0" id="about">
+        <p class="h5 my-5">About Me
         </p>
       </div>
       <div class="row  justify-content-center align-items-center my-4">
@@ -92,7 +91,7 @@
     <div class="container-fluid container3">
       <div class="row justify-content-center">
         <div class="col-auto">
-          <p class="h5 my-4">
+          <p class="h5 my-5">
             Skills</p>
         </div>
       </div>
@@ -131,7 +130,80 @@
       </div>
       </div>
 
+    <div class="container-fluid container5">
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <p class="h5 my-5">
+            Projects</p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+          <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+            </div>
+          </div>
+          </div>
+          <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+          <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+            </div>
+          </div>
+          </div>
+          <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">Card link</a>
+              </div>
+            </div>
+          </div>
+      </div>
 
+
+    </div>
 
   </body>
 </html>
