--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link rel="stylesheet" href="css/styles.css" />
+
     <title>Vishnu</title>
 
   </head>
@@ -139,7 +140,7 @@
       </div>
       <div class="row justify-content-center align-items-center">
         <div class="col-md-3 col-xs-5 col-sm-5 my-2">
-          <div class="card" style="width: 20rem;">
+          <div class="card">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -149,7 +150,7 @@
           </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
-            <div class="card" style="width: 20rem;">
+            <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -159,7 +160,7 @@
             </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
-            <div class="card" style="width: 20rem;">
+            <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -171,7 +172,7 @@
       </div>
       <div class="row justify-content-center align-items-center">
         <div class="col-md-3 col-xs-5 col-sm-5 my-2">
-          <div class="card" style="width: 20rem;">
+          <div class="card">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -181,7 +182,7 @@
           </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
-            <div class="card" style="width: 20rem;">
+            <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -191,7 +192,7 @@
             </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
-            <div class="card" style="width: 20rem;">
+            <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -201,8 +202,33 @@
             </div>
           </div>
       </div>
+    </div>
 
-
+    <div class="container-fluid container6">
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <p class="h5 my-5">
+            Contact</p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center ">
+        <div class="col-md-3 col-xs-5 col-sm-5 text-center">
+          <p>
+            <span class="glyphicon glyphicon-map-marker addressicon"></span>
+            461 Washington st<br>Brighton<br>MA - 02135
+          </p>
+        </div>
+        <div class="col-md-3 col-xs-5 col-sm-5 text-center">
+          <p>
+            vishnuvardhan.aluri@gmail.com
+          </p>
+        </div>
+        <div class="col-md-3 col-xs-5 col-sm-5 text-center">
+          <p>
+            +1 6173192434
+          </p>
+        </div>
+      </div>
     </div>
 
   </body>
