--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                   <a class="nav-link active" href="#about">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Skills</a>
+                  <a class="nav-link active" href="#skill">Skills</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Contact</a>
+                  <a class="nav-link active" href="#contact">Contact</a>
                 </li>
               </ul></div>
             </div>
@@ -90,7 +90,7 @@
 
 
     <div class="container-fluid container3">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" id="skill">
         <div class="col-auto">
           <p class="h5 my-5">
             Skills</p>
@@ -205,7 +205,7 @@
     </div>
 
     <div class="container-fluid container6">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" id="contact">
         <div class="col-auto">
           <p class="h5 my-5">
             Contact</p>
