--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link rel="stylesheet" href="css/styles.css" />
 
@@ -98,34 +100,82 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-4 col-xs-6 col-sm-6">
-          <p class="h7 my-2">JavaScript
-          </p>
-          <div class="progress">
-            <div class="progress-bar bg-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
-          </div>
-        </div>
-        <div class="col-md-4 col-xs-6 col-sm-6">
-          <p class="h7 my-2">Python
-          </p>
-          <div class="progress">
-            <div class="progress-bar bg-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
-          </div>
-        </div>
-
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-4 col-xs-6 col-sm-6">
           <p class="h7 my-2">R
           </p>
           <div class="progress">
-            <div class="progress-bar bg-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
           </div>
         </div>
         <div class="col-md-4 col-xs-6 col-sm-6">
           <p class="h7 my-2">SQL
           </p>
           <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">JavaScript
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">Python
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">Java
+          </p>
+          <div class="progress">
             <div class="progress-bar bg-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Intermediate</div>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">C
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">HTML
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">CSS
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">Tableau
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-6 col-sm-6">
+          <p class="h7 my-2">Google Analytics
+          </p>
+          <div class="progress">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Advanced</div>
           </div>
         </div>
       </div>
@@ -142,30 +192,30 @@
         <div class="col-md-3 col-xs-5 col-sm-5 my-2">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
+              <h5 class="card-title">ETL Tool</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Python</h6>
+              <p class="card-text">Extract, transform and load operations were performed on a data set using Python implementing multi-threading</p>
+              <a href="#" class="card-link">Github</a>
             </div>
           </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <h5 class="card-title">Congestion Prediction</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Pyspark, Pandas, Numpy</h6>
+                <p class="card-text">In this project, logistic regression was used to predict if there is congestion in a particular route in Dublin city.</p>
+                <a href="#" class="card-link">Github</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <h5 class="card-title">Single Page Web Application</h5>
+                <h6 class="card-subtitle mb-2 text-muted">JavaScript, CSS, HTML</h6>
+                <p class="card-text">An interactive single page web application was developed using Java script, HTML and CSS and hosted in local python server.</p>
+                <a href="#" class="card-link">Github</a>
               </div>
             </div>
           </div>
@@ -174,30 +224,63 @@
         <div class="col-md-3 col-xs-5 col-sm-5 my-2">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
+              <h5 class="card-title">Career Longevity of NBA rookies</h5>
+              <h6 class="card-subtitle mb-2 text-muted">R, WEKA</h6>
+              <p class="card-text">Career longevity was predicted from the data set by choosing best set of algorithms in WEKA.</p>
+              <a href="#" class="card-link">Github</a>
             </div>
           </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <h5 class="card-title">Analysis of H1B Petitions in 2016</h5>
+                <h6 class="card-subtitle mb-2 text-muted">R</h6>
+                <p class="card-text">Data was analyzed upon applying several sampling techniques and central limit theorem.</p>
+                <a href="#" class="card-link">Github</a>
               </div>
             </div>
           </div>
           <div class="col-md-3 col-xs-5 col-sm-5 my-2">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <h5 class="card-title">Sentiment Analysis on tweets</h5>
+                <h6 class="card-subtitle mb-2 text-muted">R</h6>
+                <p class="card-text">Performed sentiment analysis for tweets on a set of six banks, to determine which banks stocks were impacted the most.</p>
+                <a href="#" class="card-link">Github</a>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">University Database</h5>
+              <h6 class="card-subtitle mb-2 text-muted">SQL</h6>
+              <p class="card-text">Built a model of University database with minimum redundancy implementing triggers and indexes.</p>
+              <a href="#" class="card-link">Github</a>
+            </div>
+          </div>
+          </div>
+          <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">UNIX Shell Interpreter</h5>
+                <h6 class="card-subtitle mb-2 text-muted">C</h6>
+                <p class="card-text">Implemented several system calls by writing a custom shell interpreter in C language.</p>
+                <a href="#" class="card-link">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-5 col-sm-5 my-2">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Night out cost around the world</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Tableau</h6>
+                <p class="card-text">Several demographics and dashboards are created on tableau based on several inferences extracted from the data set.</p>
+                <a href="#" class="card-link">Github</a>
               </div>
             </div>
           </div>
@@ -214,8 +297,8 @@
       <div class="row justify-content-center align-items-center ">
         <div class="col-md-3 col-xs-5 col-sm-5 text-center">
           <p>
-            <span class="glyphicon glyphicon-map-marker addressicon"></span>
-            461 Washington st<br>Brighton<br>MA - 02135
+            <span class="glyphicon glyphicon-map-marker"></span>
+            461 Washington st<br>Brighton, MA - 02135
           </p>
         </div>
         <div class="col-md-3 col-xs-5 col-sm-5 text-center">
