--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <script>$("#fileRequest").click(function() {
     // // hope the server sets Content-Disposition: attachment!
-    window.location = 'css/Resume.pdf';
+    $("fileRequest").click(function(){
+      alert("clicked");
+    });
     });</script>
 
     <title>Vishnu</title>
