--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- Optional JavaScript -->
@@ -12,17 +15,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-   <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link rel="stylesheet" href="css/styles.css" />
 
-    <script>$("#fileRequest").click(function() {
-    // // hope the server sets Content-Disposition: attachment!
-    $("fileRequest").click(function(){
-      alert("clicked");
-    });
-    });</script>
 
     <title>Vishnu</title>
 
@@ -66,7 +61,7 @@
         </div>
         <div class="row align-items-center justify-content-center">
           <div class="col-auto">
-            <button type="button" class="btn btn-secondary buttonlanding">Contact</button>
+            <button type="button" class="btn btn-secondary buttonlanding" id="gotocontact">Contact</button>
             <button type="button" class="btn btn-secondary buttonlanding" id="fileRequest">Resume</button>
           </div>
         </div>
@@ -318,6 +313,17 @@
         </div>
       </div>
     </div>
+
+    <script>
+    $("#fileRequest").on('click',(function(e) {
+      e.preventDefault();  //stop the browser from following
+      window.location.href = 'css/Resume.pdf';
+    }));
+
+    $("#gotocontact").on('click',(function(){
+      $(window).scrollTop($('#contact').offset().top);
+    }));
+    </script>
 
   </body>
 </html>
