--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link rel="stylesheet" href="css/styles.css" />
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
     <title>Vishnu</title>
 
@@ -297,17 +297,19 @@
       <div class="row justify-content-center align-items-center ">
         <div class="col-md-3 col-xs-5 col-sm-5 text-center">
           <p>
-            <span class="glyphicon glyphicon-map-marker"></span>
+            <span><i class="fas fa-map-marker-alt" style="font-size:48px"></i></span><br><br>
             461 Washington st<br>Brighton, MA - 02135
           </p>
         </div>
         <div class="col-md-3 col-xs-5 col-sm-5 text-center">
           <p>
+            <span><i class="fas fa-envelope" style="font-size:48px"></i></span><br><br>
             valuri@bu.edu
           </p>
         </div>
         <div class="col-md-3 col-xs-5 col-sm-5 text-center">
           <p>
+            <span><i class="fas fa-phone" style="font-size:48px"></i></span><br><br>
             +1 6173192434
           </p>
         </div>
@@ -316,7 +318,7 @@
 
     <script>
     $("#fileRequest").on('click',(function(e) {
-      e.preventDefault();  //stop the browser from following
+      e.preventDefault();
       window.location.href = 'css/Resume.pdf';
     }));
 
