--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="row align-items-center justify-content-center">
           <div class="col-auto">
-             <p class="h1 h1my"> Vishnu Walter. </p>
+             <p class="h1 h1my"> Vishnu Aluri. </p>
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
